@@ -1,1 +1,1 @@
-DIST cgminer-2.9.5.tar.bz2 5505907 SHA256 cc04ac93a37abc0ea2950e56a06e8c19846299c73136b72dfa40c4737f2a6cec SHA512 28f55a7072b3ec989789a01baef2ebe76a1e33fecf1b715eb4f26bb1da6c5443fad901e4cc7f43db0921ff18be18fe1695fbb7435372ac43efb928c87a6a6c3c WHIRLPOOL ee50e957118d9b9782cbb734749c394fd71515290b90d3c21bad1f1f46a77ebc444b8d58be1c8db9ac10124d572dd6cf889b3be81741738cae1ec19c7857e65d
+DIST cgminer-2.10.4.tar.bz2 5540204 SHA256 ae80c863498b8cfa87cc0dc38c525d005df82b569e2a4a050802914ee01a1b3f SHA512 4d72d40654a3ea016edfdb733b8d537e9f89b23ac61196ba43c1e1e413b9002e60d929c6c1a5683a11951090000475b25f7775c7ab1e9832666e6b9fb29e44d8 WHIRLPOOL e8b3f4205340397353432cc25a2483b49578ed38ff06c7f821842961351ddcc6322ab55c8aa4fa17ab40fb58056830bcb67be241f2deaf55e6f8b07aeb4e1a71
